Fix screenshot img getting squished on small screens:

--- a/source/stylesheets/2017-08-22.css.scss
+++ b/source/stylesheets/2017-08-22.css.scss
@@ -188,7 +188,7 @@ a.card {
 
 .portrait-device {
   background: $white;
-  height: 40em;
+  max-height: 40rem;
   padding: 3rem 1rem;
   border-radius: 2rem;
   box-shadow: 0 2px 5px 2px $offwhite-highlighted-bg;
